--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@matteusan/sentro": "^0.1.5",
+    "@types/three": "^0.134.0",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "three": "^0.134.0"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
