--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@matteusan/himig-react": "0.1.4",
-    "@matteusan/sentro": "0.1.12",
-    "@types/three": "0.134.0",
+    "@heroicons/react": "^2.1.1",
+    "@icons-pack/react-simple-icons": "^9.3.0",
+    "@matteusan/himig": "^1.3.2",
+    "@matteusan/himig-web": "0.1.4",
+    "@matteusan/sentro": "0.1.25",
+    "@types/three": "^0.161.2",
+    "lit": "^3.1.2",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "1.43.4",
-    "three": "0.134.0"
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/node": "20.11.20",
     "@types/react": "18.2.57",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
     "typescript": "5.3.3"
   }
 }
