--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matteu-san",
-  "version": "1.2.0",
+  "version": "2.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,7 +15,9 @@
     "@matteusan/himig-web": "0.1.4",
     "@matteusan/sentro": "0.1.25",
     "@types/three": "^0.161.2",
+    "framer-motion": "^11.0.12",
     "lit": "^3.1.2",
+    "motion": "^10.17.0",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
