--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "@matteusan/himig": "^1.3.2",
     "@matteusan/himig-web": "0.1.4",
     "@matteusan/sentro": "0.1.25",
-    "@types/three": "^0.161.2",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.1.3",
+    "@types/mdx": "^2.0.11",
     "framer-motion": "^11.0.12",
-    "lit": "^3.1.2",
-    "motion": "^10.17.0",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "1.43.4",
-    "three": "^0.162.0"
+    "sass": "1.43.4"
   },
   "devDependencies": {
     "@types/node": "20.11.20",
