--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark-gfm": "^4.0.0",
     "sass": "1.43.4"
   },
   "devDependencies": {
