--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring resources.
 /.idea
 
 # dependencies
@@ -26,7 +26,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# local env resources
 .env.local
 .env.development.local
 .env.test.local
