--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@icons-pack/react-simple-icons": "^9.3.0",
-    "@matteusan/himig": "1.3.4",
+    "@matteusan/himig": "^1.4.0",
     "@matteusan/sentro": "0.1.25",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
