--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@next/mdx": "^14.1.3",
     "@types/mdx": "^2.0.11",
     "framer-motion": "^11.0.12",
+    "i18next": "^23.11.2",
     "next": "14.1.0",
+    "next-i18next": "^15.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^14.1.0",
     "remark-gfm": "^4.0.0",
     "sass": "1.43.4"
   },
