--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.1.3",
+    "@shikijs/rehype": "^1.3.0",
     "@types/mdx": "^2.0.11",
     "framer-motion": "^11.0.12",
     "i18next": "^23.11.2",
@@ -25,7 +26,8 @@
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.0",
     "remark-gfm": "^4.0.0",
-    "sass": "1.43.4"
+    "sass": "1.43.4",
+    "shiki": "^1.3.0"
   },
   "devDependencies": {
     "@nonsugarless/webp-converter": "^1.0.4",
