--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,8 +11,6 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@icons-pack/react-simple-icons": "^9.3.0",
-    "@matteusan/himig": "^1.5.1",
-    "@matteusan/sentro": "0.1.25",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.1.3",
@@ -26,13 +24,15 @@
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.0",
     "remark-gfm": "^4.0.0",
-    "sass": "1.43.4",
     "shiki": "^1.3.0"
   },
   "devDependencies": {
+    "@matteusan/himig": "^1.7.1",
+    "@matteusan/sentro": "^1.2.2",
     "@nonsugarless/webp-converter": "^1.0.4",
     "@types/node": "20.11.20",
     "@types/react": "18.2.57",
+    "sass": "1.86.1",
     "typescript": "5.3.3"
   }
 }
