--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@heroicons/react": "^2.1.1",
     "@icons-pack/react-simple-icons": "^9.3.0",
     "@mdx-js/loader": "^3.0.1",
@@ -16,7 +17,7 @@
     "@next/mdx": "^14.1.3",
     "@shikijs/rehype": "^1.3.0",
     "@types/mdx": "^2.0.11",
-    "framer-motion": "^11.0.12",
+    "gsap": "^3.12.7",
     "i18next": "^23.11.2",
     "next": "15.1.2",
     "next-i18next": "^15.3.0",
