--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@heroicons/react": "^2.1.1",
-    "@icons-pack/react-simple-icons": "^9.3.0",
+    "@icons-pack/react-simple-icons": "^12.6.0",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.1.3",
@@ -19,7 +19,8 @@
     "@types/mdx": "^2.0.11",
     "gsap": "^3.12.7",
     "i18next": "^23.11.2",
-    "next": "15.1.2",
+    "lenis": "^1.2.3",
+    "next": "15.2.4",
     "next-i18next": "^15.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
