--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
     "@gsap/react": "^2.1.2",
     "@heroicons/react": "^2.1.1",
     "@icons-pack/react-simple-icons": "^12.6.0",
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.1.3",
-    "@shikijs/rehype": "^1.3.0",
-    "@types/mdx": "^2.0.11",
+    "@mdx-js/loader": "3.1.0",
+    "@mdx-js/react": "3.1.0",
+    "@next/mdx": "15.3.0",
+    "@shikijs/rehype": "^3.2.2",
     "gsap": "^3.12.7",
     "i18next": "^23.11.2",
     "lenis": "^1.2.3",
-    "next": "15.2.4",
+    "next": "15.3.0",
     "next-i18next": "^15.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.0",
-    "remark-gfm": "^4.0.0",
-    "shiki": "^1.3.0"
+    "remark-gfm": "4.0.0",
+    "shiki": "^3.2.2"
   },
   "devDependencies": {
     "@matteusan/himig": "^1.7.1",
     "@matteusan/sentro": "^1.2.2",
     "@nonsugarless/webp-converter": "^1.0.4",
+    "@types/mdx": "2.0.13",
     "@types/node": "20.11.20",
     "@types/react": "18.2.57",
     "sass": "1.86.1",
