--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "NODE_OPTIONS='--inspect' next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,6 +19,7 @@
     "gsap": "^3.12.7",
     "i18next": "^23.11.2",
     "lenis": "^1.2.3",
+    "motion": "^12.7.4",
     "next": "15.3.0",
     "next-i18next": "^15.3.0",
     "react": "18.2.0",
