--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/react": "3.1.0",
     "@next/mdx": "15.3.0",
     "@shikijs/rehype": "^3.2.2",
+    "@vercel/analytics": "^1.5.0",
     "gsap": "^3.12.7",
     "i18next": "^23.11.2",
     "lenis": "^1.2.3",
