--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.0",
     "remark-gfm": "4.0.0",
-    "shiki": "^3.2.2",
-    "split-type": "^0.3.4"
+    "shiki": "^3.2.2"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^7.0.2",
