--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "matteu-san",
   "version": "3.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "dev:inspect": "NODE_OPTIONS='--inspect' next dev --turbopack",
