--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@shikijs/rehype": "^3.2.2",
     "@vercel/analytics": "^1.5.0",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.1",
     "motion": "^12.7.4",
     "next": "15.3.0",
     "react": "18.2.0",
