--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "matteu-san",
-  "version": "3.1.0",
+  "name": "matteusan-website",
+  "version": "3.2.0",
   "private": true,
   "type": "module",
   "scripts": {
