--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@next/mdx": "15.3.0",
     "@shikijs/rehype": "^3.2.2",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.1",
     "motion": "^12.7.4",
