--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark-gfm": "4.0.0",
-    "shiki": "^3.2.2"
+    "shiki": "^3.2.2",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@matteusan/himig": "^1.8.2",
