--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "shiki": "^3.2.2"
   },
   "devDependencies": {
-    "@matteusan/himig": "^1.8.2",
+    "@matteusan/himig": "^1.9.0",
+    "@matteusan/pintig": "^1.10.0",
     "@matteusan/sentro": "^1.3.0",
     "@nonsugarless/webp-converter": "^1.0.4",
     "@types/mdx": "2.0.13",
