--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "@icons-pack/react-simple-icons": "^12.6.0",
     "@mdx-js/loader": "3.1.0",
     "@mdx-js/react": "3.1.0",
-    "@next/mdx": "15.3.0",
+    "@next/mdx": "15.3.5",
     "@shikijs/rehype": "^3.2.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "framer-motion": "^12.23.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.4",
     "motion": "^12.7.4",
-    "next": "15.3.0",
+    "next": "15.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark-gfm": "4.0.0",
@@ -32,7 +33,7 @@
   },
   "devDependencies": {
     "@matteusan/himig": "^1.9.0",
-    "@matteusan/pintig": "^1.10.0",
+    "@matteusan/pintig": "^1.10.1",
     "@matteusan/sentro": "^1.3.0",
     "@nonsugarless/webp-converter": "^1.0.4",
     "@types/mdx": "2.0.13",
